added some more responsive functionality

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,10 +15,10 @@
         <span class="brand">
             <img src="./images/brand.png" alt="">
         </span>
-        <button>
+        <a href="https://www.instagram.com/accounts/login/">
           <img src="./images/home.png" alt="">
           Log in
-        </button>
+        </a>
       </div>
       <div class="words">
         <h1>Capture and Share<br>the World's Moments</h1>
@@ -31,23 +31,29 @@
         <p>
             Oh yeah, did we mention it's free?
         </p>
-        <a href="https://apps.apple.com/bn/app/instagram/id389801252">
-          <img src="./images/badge-iphone.png" alt="">
-        </a>
-        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_US">
-            <img src="./images/badge-android.png" alt="">
-        </a>
+        <span class="app-store">
+            <a href="https://apps.apple.com/bn/app/instagram/id389801252">
+              <img src="./images/badge-iphone.png" alt="">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_US">
+                <img src="./images/badge-android.png" alt="">
+            </a>
+        </span>
+
       </div>
     </div>
   </div>
-  <!-- About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
- 2014 Instagram -->
+  <footer class="bottom-links">
+    <a href="https://www.instagram.com/about/us/">About Us</a>
+    <a href="https://help.instagram.com/">Support</a>
+    <a href="https://business.instagram.com/blog">Blog</a>
+    <a href="https://instagram-press.com/">Press</a>
+    <a href="https://www.instagram.com/developer/">API</a>
+    <a href="https://www.instagram.com/about/jobs/">Jobs</a>
+    <a href="https://help.instagram.com/196883487377501">Privacy</a>
+    <a href="https://help.instagram.com/581066165581870">Terms</a>
+    <span class="trademark">© 2014 Instagram</span>
+  </footer>
+  <!--  -->
 </body>
 </html>
