--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,19 +6,25 @@
 </head>
 <body>
   <header>
-    <div></div>
+    <!-- <div></div>
     <div class="right-side-header">
         <img src="./images/brand.png">
         <div class="login">
           <button><img src="./images//home.png"><span><strong>Log in</strong></span></button>
         </div>
-      </div>
+      </div> -->
   </header>
   <section class="web-description">
 <div class="phone-image">
 <img src="./images/phones.png" alt="phones image">
 </div>
 <div class="page-details">
+    <div class="right-side-header">
+        <img src="./images/brand.png">
+        <div class="login">
+          <button><img src="./images//home.png"><span><strong>Log in</strong></span></button>
+        </div>
+      </div>
   <div class="card">
       <h2>Capture and Share the World's Moments</h2>
       <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
