Completed Instagram lab

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="bgtheme"></div>
+  <section class="layout container">
+    <div class="mobile-img">
+      <img src="images/phones.png" alt="Phones" />
+    </div>
+    <div class="instagram-content">
+      <div class="instagram-header">
+        <div class="instagram-logo">
+          <img src="images/brand.png" alt="Instagram" />
+        </div>
+        <div class="instagram-login">
+            <a href="#" class="login-btn"><img src="images/home.png"/>Log in</a>
+        </div>
+      </div>
+      <div class="inst-content">
+        <div class="inner-content">
+          <h1>Capture and Share<br />the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>yeah, did we mention it's free?</p>
+          <div class="download-links">
+            <div class="applinks"><img src="images/badge-iphone.png" alt="Apple banner" /></div>
+            <div class="applinks"><img src="images/badge-android.png" alt="Android banner" /></div>
+          </div>
+        </div>
+    </div>
+    </div>
+  </section>
+  <footer>
+    <ul class="footer_links">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">ASupport</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
