DE-WDFT-MEX Jesus Flores

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="gradient">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="main-wrapper">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-wrapper">
+      <img id="telefono-img" src="images/phones.png" alt="phone app">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-wrapper">
 
-  Oh yeah, did we mention it's free?
+      <div class="mini-nav">
+        <img src="images/brand.png" alt="logo">
+        <div class="button-login">
+          <a="">
+            <img src="images/home.png" alt="house icon">
+            Log in</a>
+        </div>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="cuadro-texto">
 
-  &copy; 2014 Instagram
+        <div class="contenedor">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+          <br>
+          <div class="buttons-download">
+            <img class="iphone-app" src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
