Maquetado HTML inicial
creacion de etiquetas preliminares

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/main.css" />
   <title>Instagram</title>
 </head>
 <body>
+  
+<div class="main">
+
+<div class="celphoneImage">
+
+</div> 
+
+
+<div class="title">
   Instagram
+</div>
 
+
+  <div class="box">
+
+  <div class="boxTitle">  
   Capture and Share the World's Moments
+  </div>
 
+  <div class="boxText">
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  </div>
 
+  <div class="boxAppstore">
   Download on the App Store
   Get it on Google Play
+  </div>
 
+  </div>
+
+</div>
+
+  <div class="bottomBar">
   About Us
   Support
   Blog
@@ -27,5 +52,7 @@
   Terms
 
   &copy; 2014 Instagram
+  </div>
+
 </body>
 </html>
