--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,101 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
 
-  Capture and Share the World's Moments
+    <div class="background-blue">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <article class="content">
 
-  Oh yeah, did we mention it's free?
+      <div class="box-left">
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="boxes-right">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="first-box-right">
+          <div class="logo-brand">
+            <img src="images/brand.png" alt="">
+          </div>
+          <div class="log-in">
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </div>
+        </div>
 
-  &copy; 2014 Instagram
+        <div class="second-box-right">
+          <div class="text-box">
+            <h3>
+              Capture and Share
+              <br>the World's Moments
+            </h3>
+            <p>
+              Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
+
+          <div class="third-box-right">
+            <div class="logo-apps">
+              <img src="images/badge-iphone.png" alt="">
+            </div>
+            <div class="logo-apps">
+              <img src="images/badge-android.png" alt="">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </article>
+
+  </main>
+
+  <footer>
+    <div class="footer-box">
+      <ul class="links-tags">
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">API</a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li>
+          <span>&copy; 2014 Instagram</span>
+        </li>
+      </ul>
+    </div>
+
+  </footer>
+
 </body>
 </html>
