--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,13 @@
 <body>
   <main>
     <header>
-      <img src="" alt="Instagram">
+      <div id="logo">
+        <img src="" alt="Instagram">
+      </div>
+      <div class="login-button">
+        <div class="house-icon"><img src="" alt="house icon"></div>
+        <div class="login-text">Log in</div>
+      </div>
     </header>
     <section>
       <div class="title">
@@ -20,7 +26,7 @@
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
-      <div class="download">
+      <div class="download-links">
         <img src="" alt="Download on the App Store">
         <img src="" alt="Get it on Google Play">
       </div>
