Modificaciones CSS y pequeños cambios html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,40 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section>
+  <section class="section-1">
     <div class="col-1">
       <img src="images/phones.png" alt="iphones">
     </div>
     <div class="col-1">
-      <article>
+      <article class="section-2">
         <div class="col-1">
-            <img src="images/brand.png" alt="">
-            <h2>Instagram</h2>
+            <img src="images/brand.png" alt="Instagram">
         </div>
         <div class="col-1">
             <button>Log in</button>
         </div>
+        <div class="clearfix"></div>
       </article>
-      <article>
+      <article  class="section-2">
         <h3>Capture and Share the World's Moments</h3>
         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
         <div class="badges">
           <div class="col-1">
-            <p>Download on the App Store</p>
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
           </div>
           <div class="col-1">
-              <p>Get it on Google Play</p>
+            <img src="images/badge-android.png" alt="Get it om GoogleP lay">
           </div>
         </div>
       </article>
-    </div>  
+    </div>
+    <div class="clearfix"></div>  
   </section>
-  <footer>
+  <footer class="section-1">
     <ul>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Support</a></li>
