Added image links

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,10 +10,10 @@
   <main>
     <header>
       <div id="logo">
-        <img src="" alt="Instagram">
+        <img src="images/brand.png" alt="Instagram">
       </div>
       <div class="login-button">
-        <div class="house-icon"><img src="" alt="house icon"></div>
+        <div class="house-icon"><img src="images/home.png" alt="house icon"></div>
         <div class="login-text">Log in</div>
       </div>
     </header>
@@ -27,8 +27,8 @@
         <p>Oh yeah, did we mention it's free?</p>
       </div>
       <div class="download-links">
-        <img src="" alt="Download on the App Store">
-        <img src="" alt="Get it on Google Play">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
       </div>
     </section>
   </main>
