Added aside with phone image

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,11 @@
   <title>Instagram</title>
 </head>
 <body>
+  <aside>
+    <div id="phones">
+      <img src="images/phones.png" alt="phones showing Instragram app">
+    </div>
+  </aside>
   <main>
     <header>
       <div id="logo">
