--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,20 +9,28 @@
 <div class="main">
 
 <div class="celphoneImage">
-
+    <img src="./images/phones.png" alt="iphones" height="380" width="240">
 </div> 
 
 
-<div class="title">
-  Instagram
+<div class="topbox"></div>
+    <div class="logo">
+        <img src="./images/brand.png" alt="logo">
+    </div>
+
+    </div class="home">
+    <img src="./images/home.png" alt="home"><span>Log in</span>
+    </div>
 </div>
 
-
   <div class="box">
+  
+    <div class="boxTitle">  
+    Capture and Share the World's Moments
+    </div>
 
-  <div class="boxTitle">  
-  Capture and Share the World's Moments
-  </div>
+    
+  
 
   <div class="boxText">
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -36,23 +44,27 @@
   Download on the App Store
   Get it on Google Play
   </div>
-
-  </div>
-
+  </div> 
 </div>
 
-  <div class="bottomBar">
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <div class="bottomBar">
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="copy">&copy; 2014 Instagram</li copy>
+  </ul>
+
+  
   </div>
+
+
 
 </body>
 </html>
