--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -16,11 +17,11 @@
       <div class="content-right">
         <div class="top-icons">
           <img src="./images/brand.png" alt="brand logo">
-          <a href="#"><img src="./images/home.png" alt="home icon"> Log in</a>
+          <a class="login-button" href="#"><img src="./images/home.png" alt="home icon"> Log in</a>
         </div>
 
         <div class="content-text">
-          <h2>Capture and Share the World's Moments</h2>
+          <h1>Capture and Share the World's Moments</h1>
       
           <p>
             Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
@@ -46,14 +47,14 @@
   
   <footer id="footer">
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
       <li><span class="copy">&copy; 2014 Instagram</span></li>
     </ul>
   </footer>
