creating a frame into the main

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/starter-code/css/main.css">
+  <link rel="stylesheet" href="../starter-code/css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <main>
+      <div class="frame">
+
+            
 
   Capture and Share the World's Moments
 
@@ -31,5 +34,9 @@
   Terms
 
   &copy; 2014 Instagram
+
+        </div>
+  </main>
+
 </body>
 </html>
