--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <body>
+    <main>
+      <section>
+        <div class="phone-img">
+          <img src="./images/phones.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="./images/brand.png" alt="">
+        </div>
+        <button><img src="./images/home.png" alt="">Log in</button>
+      </section>
+      <section>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+          way to share
+          your life with friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
+          more.
+          It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="./images/badge-iphone.png" alt="">
+        <img src="./images/badge-android.png" alt="">
+      </section>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagrams</li>
+        </ul>
+      </footer>
+    </main>
+  </body>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
 </html>
