add phone image, logo and log in button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <main>
+    <div id="main-content" class="container">
+      <div id="phones">
+        <img src="images/phones.png" alt="smartphones showing the app">
+      </div>
+      <div id="login">
+        <img src="images/brand.png" alt="Instagram logo">
+        <button id="login-button" class="button">
+          <img src="images/home.png" alt="home icon">
+          <span>Log in</span>
+        </button>
+      </div>
+      <div id="text">
+        Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+        Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+        Download on the App Store
+        Get it on Google Play
+      </div>
+      <div class="clear"></div>
+    </div>
+  </main>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <div class="container">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
 
-  &copy; 2014 Instagram
+      &copy; 2014 Instagram
+    </div>
+  </footer>
+
 </body>
 </html>
