Positioned phones and header logo with plain background color

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
@@ -14,19 +15,24 @@
   </aside>
   <main>
     <header>
-      <div id="logo">
-        <img src="images/brand.png" alt="Instagram">
-      </div>
-      <div class="login-button">
-        <div class="house-icon"><img src="images/home.png" alt="house icon"></div>
-        <div class="login-text">Log in</div>
+      <div class="header">
+        <div id="logo">
+          <img src="images/brand.png" alt="Instagram">
+        </div>
+        <div class="login-button">
+          <div class="house-icon"><img src="images/home.png" alt="house icon"></div>
+          <div class="login-text">Log in</div>
+        </div>
       </div>
     </header>
-    <section>
+    <section class="description">
+      <div id="frame">
+      <img src="images/frame.png" alt="frame">
+      </div>
       <div class="title">
         <h2>Capture and Share the World's Moments</h2>
       </div>
-      <div class="description">
+      <div class="paragraph">
         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
