add texts and download buttons

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,24 +14,24 @@
       <div id="phones">
         <img src="images/phones.png" alt="smartphones showing the app">
       </div>
-      <div id="login">
-        <img src="images/brand.png" alt="Instagram logo">
-        <button id="login-button" class="button">
-          <img src="images/home.png" alt="home icon">
-          <span>Log in</span>
-        </button>
-      </div>
-      <div id="text">
-        Capture and Share the World's Moments
-
-        Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-        Oh yeah, did we mention it's free?
-
-        Download on the App Store
-        Get it on Google Play
+      <div class="info-right">
+        <div id="login">
+          <img src="images/brand.png" alt="Instagram logo">
+          <button id="login-button" class="button">
+            <img src="images/home.png" alt="home icon">
+            <span>Log in</span>
+          </button>
+        </div>
+        <div id="text-box">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div id="download-buttons">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
       </div>
       <div class="clear"></div>
     </div>
