Working on frame position

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,16 +19,17 @@
         <div id="logo">
           <img src="images/brand.png" alt="Instagram">
         </div>
-        <div class="login-button">
-          <div class="house-icon"><img src="images/home.png" alt="house icon"></div>
-          <div class="login-text">Log in</div>
+        <div id="login-button">
+          <div id="house-icon"><img src="images/home.png" alt="house icon"></div>
+          <div id="login-text">Log in</div>
         </div>
+      </div>
+      <div id="frame">
+        <img src="images/frame.png" alt="frame">
       </div>
     </header>
     <section class="description">
-      <div id="frame">
-      <img src="images/frame.png" alt="frame">
-      </div>
+      <div class="text">
       <div class="title">
         <h2>Capture and Share the World's Moments</h2>
       </div>
