--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,17 +38,16 @@
   </main>
 
   <footer>
-    <div class="container">
-      About Us
-      Support
-      Blog
-      Press
-      API
-      Jobs
-      Privacy
-      Terms
-
-      &copy; 2014 Instagram
+    <div id="foot" class="container">
+      <a>About Us</a>
+      <a>Support</a>
+      <a>Blog</a>
+      <a>Press</a>
+      <a>API</a>
+      <a>Jobs</a>
+      <a>Privacy</a>
+      <a>Terms</a>
+      <span class="copy">&copy; 2014 Instagram</span>
     </div>
   </footer>
 
