--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <div class="title">
+          <img src="./images/brand.png" alt="brand" /><button>
+            <img src="./images/home.png" alt="" /> Log in
+          </button>
+        </div>
+      </header>
+      Instagram Capture and Share the World's Moments Instagram is a fast,
+      beautiful and fun way to share your life with friends and family. Take a
+      picture or video, choose a filter to transform its look and feel, then
+      post to Instagram &mdash; it's that easy. You can even share to Facebook,
+      Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
+      mention it's free? Download on the App Store Get it on Google Play About
+      Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </div>
+  </body>
 </html>
