Add images @ header

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Instagram</title>
   </head>
   <body>
     <div class="container">
       <header class="header">
-        <div class="title">
-          <img src="./images/brand.png" alt="brand" /><button>
-            <img src="./images/home.png" alt="" /> Log in
-          </button>
-        </div>
+        <div class="main_top">
+          <div class="title">
+            <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img src="./images/home.png" alt="" /> <a>Log in</a>
+            </button>
+          </div>
       </header>
-      Instagram Capture and Share the World's Moments Instagram is a fast,
-      beautiful and fun way to share your life with friends and family. Take a
-      picture or video, choose a filter to transform its look and feel, then
-      post to Instagram &mdash; it's that easy. You can even share to Facebook,
-      Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
-      mention it's free? Download on the App Store Get it on Google Play About
-      Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+      <div class="main">
+        <div class="phones">
+          <img src="./images/phones.png" alt="phones">
+        </div>
+        <img class="frame" src="./images/frame.png" alt="frame" />
+        <p>
+          Capture and Share the World's Moments Instagram is a fast, beautiful
+          and fun way to share your life with friends and family. Take a picture
+          or video, choose a filter to transform its look and feel, then post to
+          Instagram &mdash; it's that easy. You can even share to Facebook,
+          Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
+          did we mention it's free? Download on the App Store Get it on Google
+          Play
+        </p>
+      </div>
+      </div>
+      <footer class="footer">
+        <ul>
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <span>&copy; 2014 Instagram</span>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
