--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,47 +5,51 @@
   <title>Instagram</title>
 </head>
 <body>
-  
+<div class="bg">
+    <img src="./images/bgtile.png" alt="background" height="180" width="100%">
+  </div>
+
 <div class="main">
-
-<div class="celphoneImage">
-    <img src="./images/phones.png" alt="iphones" height="380" width="240">
-</div> 
-
-
-<div class="topbox"></div>
+<div class="columnLeft">
+  <div class="celphoneImage">
+      <img src="./images/phones.png" alt="iphones" height="420" width="240">
+  </div> 
+</div>
+<div class="columnRight">
+  <div class="topbox">
     <div class="logo">
         <img src="./images/brand.png" alt="logo">
     </div>
 
-    </div class="home">
-    <img src="./images/home.png" alt="home"><span>Log in</span>
+    <div class="home">
+      <div class="button">
+        <img src="./images/home.png" alt="home"><span>Log in</span>
+      </div>
     </div>
-</div>
+  </div>
 
   <div class="box">
   
-    <div class="boxTitle">  
-    Capture and Share the World's Moments
-    </div>
+        <div class="boxTitle">  
+        <ttb>Capture and Share the World's Moments</ttb>
+        </div>
 
-    
-  
+        <div class="boxText">
+        
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  <div class="boxText">
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-  </div>
-
-  <div class="boxAppstore">
-  Download on the App Store
-  Get it on Google Play
-  </div>
-  </div> 
+        <div class="boxAppstore">
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </div>
+    </div> 
+  </div>  
 </div>
+
 
 
   <div class="bottomBar">
