--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class='dark-blue'>
+    <img class='phones' src="./images/phones.png">
+    <div>
+      <section class='title'>
+        <img src="./images/brand.png">
+        <button class='button-blue'><a href="#"><img src="images/home.png">Log In</a></button>
+      </section>
+      
+      <article class='article'>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free. 
+        </p>
+        <div>
+          <img src="./images/badge-iphone.png">
+          <img src="./images/badge-android.png">
+        </div> 
+      </article>
+    </div>
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer class='footer'>
+    <section>
+      <ul>
+        <li>About Us</li>          
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </section>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
