--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,25 +11,27 @@
   <main>
       
     <div class="frame">  
-    <div class="top"></div>
-    <div class="iphone">
+      <div class="top"></div>
+      <div class="iphone">
       <img src="../starter-code/images/phones.png" alt="image phones">
-    </div>
-    <div class="box">
+      </div>
+      <div class="box">
+        <img src="../starter-code/images/brand.png" alt="image brand">
+        <form class="col-rside">
+          <button class="button" type="submit" id="login"><img class="img" src="../starter-code/images/home.png" alt="home logo"><div class="col-rside text"><strong>Log in</strong></div></button>
+        </form>
 
-  Capture and Share the World's Moments
+              Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                    Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+                  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-
-    </div>
+                      Download on the App Store
+                      Get it on Google Play
+       </div>
 
 
             
