Add box inside the other div

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,8 +20,9 @@
         <form class="col-rside">
           <button class="button" type="submit" id="login"><img class="img" src="../starter-code/images/home.png" alt="home logo"><div class="col-rside text"><strong>Log in</strong></div></button>
         </form>
-
-              Capture and Share the World's Moments
+        <div class="description">
+            <div class="reduction"><h3>Capture and Share the World's Moments </h3></div>
+            
 
                     Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
@@ -31,6 +32,8 @@
 
                       Download on the App Store
                       Get it on Google Play
+        </div>
+              
        </div>
 
 
