--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,16 +22,9 @@
         </form>
         <div class="description">
             <div class="reduction"><h3>Capture and Share the World's Moments </h3></div>
-            
-
-                    Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-                    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-                  Oh yeah, did we mention it's free?
-
-                      Download on the App Store
-                      Get it on Google Play
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
         </div>
               
        </div>
