First attempt at styling with floats breaks easily when resized

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,6 +38,7 @@
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
+      </div>
       <div class="download-links">
         <img src="images/badge-iphone.png" alt="Download on the App Store">
         <img src="images/badge-android.png" alt="Get it on Google Play">
@@ -45,15 +46,19 @@
     </section>
   </main>
   <footer>
-    <a href="">About Us</a>
-    <a href="">Support</a>
-    <a href="">Blog</a>
-    <a href="">Press</a>
-    <a href="">API</a>
-    <a href="">Jobs</a>
-    <a href="">Privacy</a>
-    <a href="">Terms</a>
+    <div class="footer-links">
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+    </div>
+    <div class="copyright">
     &copy; 2014 Instagram
+    </div>
   </footer>
 </body>
 </html>
