--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-  
+  <header>
+  </header>
+  <main>
 
-  Capture and Share the World's Moments
+    <section class=centerbox>
+      <div class="phones">
+        <img src="images/phones.png">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class=mainblock>
+        <img src="images/brand.png">
+        <img src="images/home.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class=secondblock>
 
-  Oh yeah, did we mention it's free?
+          <h1> Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  &copy; 2014 Instagram
+            Oh yeah, did we mention it's free?</p>
+
+        </div>
+        <img src="images/badge-iphone.png"><img src="images/badge-android.png">
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    &copy; 2014 Instagram
+  </footer>
+
+
 </body>
+
 </html>
