--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <Header>
+    <nav></nav>
+  </Header>
 
-  Capture and Share the World's Moments
+  <main>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="centerbox">
+      <div class="phones">
+        <img src="images/phones.png" >
+      </div>
+      <div class="instagram">
+        <img src="images/brand.png">
+        <img src="images/home.png"> Login in
+        <div class="second">
+          
+          <h1>Capture and Share the World's Moments</h1>
+          <p class="text">
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+            Oh yeah, did we mention it's free?
+          </p>
+        </div clas="logos">
+          <img src="images/badge-iphone.png" alt="50px">
+          <img src="images/badge-android.png" alt="50px">
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <footer>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+      &copy; 2014 Instagram
+    </footer>
+  </main>
 </body>
+
 </html>
