--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,18 +37,20 @@
     </div>
   </main>
 
-  <footer>
-    <div id="foot" class="container">
-      <a>About Us</a>
-      <a>Support</a>
-      <a>Blog</a>
-      <a>Press</a>
-      <a>API</a>
-      <a>Jobs</a>
-      <a>Privacy</a>
-      <a>Terms</a>
-      <span class="copy">&copy; 2014 Instagram</span>
-    </div>
+  <footer id="foot">
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+    </nav>
+    <span class="copy">&copy; 2014 Instagram</span>
   </footer>
 
 </body>
