--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -13,6 +14,7 @@
     <header>
       <img src="images/brand.png">
       <button><img src="images/home.png"> Log in</button>
+      <div class="clear"></div>
     </header>
     
     <article>
