Working on style with main container positioned absoutely

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,26 +8,23 @@
   <title>Instagram</title>
 </head>
 <body>
-  <aside>
-    <div id="phones">
+  <div class="background"></div>
+  <main>
+    <div id="phones" class="relative inline">
       <img src="images/phones.png" alt="phones showing Instragram app">
     </div>
-  </aside>
-  <main>
-    <header>
-      <div class="header">
-        <div id="logo">
-          <img src="images/brand.png" alt="Instagram">
-        </div>
-        <div id="login-button">
-          <div id="house-icon"><img src="images/home.png" alt="house icon"></div>
-          <div id="login-text">Log in</div>
-        </div>
+    <div id="header" class="relative inline">
+      <div id="logo" class="inline">
+        <img src="images/brand.png" alt="Instagram">
       </div>
-      <div id="frame">
-        <img src="images/frame.png" alt="frame">
+      <div id="login-button" class="inline">
+        <div id="house-icon" class="inline"><img src="images/home.png" alt="house icon"></div>
+        <div id="login-text" class="inline">Log in</div>
       </div>
-    </header>
+    </div>
+    <div id="frame" class="inline">
+      <img src="images/frame.png" alt="frame">
+    </div>
     <section class="description">
       <div class="text">
       <div class="title">
@@ -44,21 +41,21 @@
         <img src="images/badge-android.png" alt="Get it on Google Play">
       </div>
     </section>
+    <footer>
+      <div class="footer-links">
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+      </div>
+      <div class="copyright">
+      &copy; 2014 Instagram
+      </div>
+    </footer>
   </main>
-  <footer>
-    <div class="footer-links">
-      <a href="">About Us</a>
-      <a href="">Support</a>
-      <a href="">Blog</a>
-      <a href="">Press</a>
-      <a href="">API</a>
-      <a href="">Jobs</a>
-      <a href="">Privacy</a>
-      <a href="">Terms</a>
-    </div>
-    <div class="copyright">
-    &copy; 2014 Instagram
-    </div>
-  </footer>
 </body>
 </html>
