Style the footer (links at the bottom) and set an Id for the copyright

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -51,7 +51,7 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li id="copyright" >&copy; 2014 Instagram</li>
     </ul>
   </footer>
 
