Modified article background to proper fit and give padding and margin to every element in it

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,7 +29,7 @@
           <p>Oh yeah, did we mention it's free?</p>
         </section>
     
-        <div>
+        <div id="images">
           <img title="Download on the App Store" src="images/badge-iphone.png">
           <img title="Get it on Google Play" src="images/badge-android.png">
         </div>
