Using absolute and relative positioning with div boxes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,12 +8,12 @@
   <title>Instagram</title>
 </head>
 <body>
-  <div class="background"></div>
+  <div id="background"></div>
   <main>
-    <div id="phones" class="relative inline">
+    <div id="phones" class="absolute inline">
       <img src="images/phones.png" alt="phones showing Instragram app">
     </div>
-    <div id="header" class="relative inline">
+    <div id="header" class="absolute inline">
       <div id="logo" class="inline">
         <img src="images/brand.png" alt="Instagram">
       </div>
@@ -22,19 +22,19 @@
         <div id="login-text" class="inline">Log in</div>
       </div>
     </div>
-    <div id="frame" class="inline">
-      <img src="images/frame.png" alt="frame">
-    </div>
-    <section class="description">
-      <div class="text">
+    <section id="description" class="absolute inline">
+      <div id="frame" class="absolute inline">
+        <img src="images/frame.png" alt="frame">
+      </div>
+      <div id="text" class="relative">
       <div class="title">
         <h2>Capture and Share the World's Moments</h2>
       </div>
-      <div class="paragraph">
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-      </div>
+        <div class="paragraph">
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
       </div>
       <div class="download-links">
         <img src="images/badge-iphone.png" alt="Download on the App Store">
