finalizada estrucutra html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div class="container">
+      <h1><span>INSTAGRAM</span></h1>
+      <a class="button-log" href=""></a>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="box-description">
+        <h2 class="title">Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="buttons">
+          <a href="#" title="Download on the App Store">Download on the App Store</a>
+          <a href="#" title="Get it on Google Play">Get it on Google Play</a>
+        </div>
+      </div>
+      <div class="box-phone">
+        <img src="images/phones.png" alt="Móvil" title="Móvil">
+      </div>
+    </div>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="#" title="About Us">About Us</a></li>
+      <li><a href="#" title="Support"><Support/a></li>
+      <li><a href="#" title="Blog">Blog</a></li>
+      <li><a href="#" title="Press">Press</a></li>
+      <li><a href="#" title="API">API</a></li>
+      <li><a href="#" title="Jobs">Jobs</a></li>
+      <li><a href="#" title="Privacy">Privacy</a></li>
+      <li><a href="#" title="Terms">Terms</a></li>
+    </ul>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
