Style main text and footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,21 +18,25 @@
         <div class="main-content">
           <div class="brand">
             <img src="./images/brand.png" alt="Instagram logo">
-            <button><img src="./images/home.png" alt="">Log in</button>
+            <button class="login-btn"><img src="./images/home.png" alt="">Log in</button>
           </div>
-          <h2>Capture and Share the World's Moments</h2>
-          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
-            <strong>fun</strong>
-            way to share
-            your life with friends and family.
-          </p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to
-            Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
-            more.
-            It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
-          <img src="./images/badge-iphone.png" alt="App store logo">
-          <img src="./images/badge-android.png" alt="Google play logo">
+          <div class="info">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+              <strong>fun</strong>
+              way to share
+              your life with friends and family.
+            </p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+              Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
+              more.
+              It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="store-img">
+            <img src="./images/badge-iphone.png" alt="App store logo">
+            <img src="./images/badge-android.png" alt="Google play logo">
+          </div>
         </div>
       </div>
     </main>
