Position the content in the center, correct the space between text and images

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 
+  <aside>
+    <img src="images/phones.png">
+  </aside>
+
   <main>
     
-    <header>
+    <header class="title">
       <img src="images/brand.png">
       <button><img src="images/home.png"> Log in</button>
       <div class="clear"></div>
@@ -37,9 +41,7 @@
     </article>
   </main>
 
-  <aside>
-    <img src="images/phones.png">
-  </aside>
+  <div class="clear"></div>
 
   <footer>
     <ul>
